# internal/laporan/handler.go
@@ -9,6 +9,14 @@ import (
 	"github.com/google/uuid"
 )
 
+// GetLaporan godoc
+// @Summary Ambil semua Laporan
+// @Description Mendapatkan daftar laporan
+// @Tags Laporan
+// @Produce json
+// @Success 200 {object} helpers.APIResponse{data=[]Laporan}
+// @Failure 500 {object} helpers.APIResponse
+// @Router /laporan [get]
 func GetLaporan(c *gin.Context) {
 	result, err := GetLaporanServices()
 
@@ -22,6 +30,16 @@ func GetLaporan(c *gin.Context) {
 	c.JSON(http.StatusOK, helpers.SuccessResponse(200, "Berhasil mengambil data", result))
 }
 
+// GetLaporanID godoc
+// @Summary Ambil laporan berdasarkan ID
+// @Description Mendapatkan data laporan berdasarkan UUID
+// @Tags Laporan
+// @Produce json
+// @Param id path string true "Laporan ID (UUID)"
+// @Success 200 {object} helpers.APIResponse{data=[]Laporan}
+// @Failure 400 {object} helpers.APIResponse{errors=[]string}
+// @Failure 404 {object} helpers.APIResponse{errors=[]string}
+// @Router /laporan/{id} [get]
 func GetLaporanID(c *gin.Context) {
 	id := c.Param("id")
 
@@ -49,6 +67,16 @@ func GetLaporanID(c *gin.Context) {
 	c.JSON(http.StatusOK, helpers.SuccessResponse(200, "Berhasil mengambil data", result))
 }
 
+// CreateLaporan godoc
+// @Summary Membuat laporan baru
+// @Description Menambahkan data laporan
+// @Tags Laporan
+// @Accept json
+// @Produce json
+// @Param request body LaporanRequest true "Data Laporan"
+// @Success 201 {object} helpers.APIResponse{data=Laporan}
+// @Failure 400 {object} helpers.APIResponse{errors=[]string}
+// @Router /laporan [post]
 func CreateLaporan(c *gin.Context) {
 	var req LaporanRequest
 
@@ -69,6 +97,18 @@ func CreateLaporan(c *gin.Context) {
 		helpers.SuccessResponse(201, "Berhasil membuat data", result))
 }
 
+// UpdateLaporan godoc
+// @Summary Update laporan
+// @Description Mengupdate data laporan
+// @Tags Laporan
+// @Accept json
+// @Produce json
+// @Param id path string true "ID Laporan"
+// @Param request body LaporanRequest true "Data laporan"
+// @Success 200 {object} helpers.APIResponse{data=Laporan}
+// @Failure 400 {object} helpers.APIResponse{errors=[]string}
+// @Failure 404 {object} helpers.APIResponse{errors=[]string}
+// @Router /laporan/{id} [put]
 func UpdateLaporan(c *gin.Context) {
 	id := c.Param("id")
 
@@ -105,6 +145,16 @@ func UpdateLaporan(c *gin.Context) {
 		helpers.SuccessResponse(200, "Berhasil mengupdate data", result))
 }
 
+// DeleteLaporan godoc
+// @Summary Hapus laporan
+// @Description Menghapus data laporan berdasarkan ID
+// @Tags Laporan
+// @Produce json
+// @Param id path string true "ID Laporan"
+// @Success 200 {object} helpers.APIResponse
+// @Failure 400 {object} helpers.APIResponse
+// @Failure 404 {object} helpers.APIResponse
+// @Router /laporan/{id} [delete]
 func DeleteLaporan(c *gin.Context) {
 	id := c.Param("id")
 
